# InvaderGame

./: .gitignore  .instructions.md  CMakeLists.txt  README.md
.github/agents/: invader-game-dev.agent.md
Engine/include/: ActorBase.h  ActorModel.h  Allocator.h  ColliderComponent.h  FrameWork.h  InputHandler.h  JobQueue.h  Logger.h  RenderQueue.h  Renderer.h  SceneBase.h  TestInputScript.h  TestScriptLoader.h  UIBase.h
Engine/src/: ActorBase.cpp  ColliderComponent.cpp  FrameWork.cpp  InputHandler.cpp  JobQueue.cpp  Logger.cpp  RenderQueue.cpp  Renderer.cpp  SceneBase.cpp  TestInputScript.cpp  TestScriptLoader.cpp  UIBase.cpp
Game/docs/: game-specs.md
Game/docs/specs/: architecture.md  bug-fixes.md  debug.md  input.md  invader.md  player.md  test-cases.md  test-script.cfg  ui.md
Game/include/: actor.h  bullet.h  game.h  game_scene.h  input_handler.h  invader.h  invader_swarm.h  player.h  renderer.h  title_scene.h
Game/include/Actor/: actor.h  bullet.h  invader.h  invader_swarm.h  player.h
Game/include/Scene/: game_scene.h  game_ui.h  score_manager.h  title_scene.h
Game/save/: .gitkeep
Game/src/: actor.cpp  bullet.cpp  game.cpp  game_scene.cpp  input_handler.cpp  invader.cpp  invader_swarm.cpp  main.cpp  player.cpp  renderer.cpp  score_manager.cpp  title_scene.cpp
docs/: coding-rules.md  game-specs.md  requirements.md
include/: bullet.h  config.h  game.h  input_handler.h  invader.h  invader_swarm.h  player.h  renderer.h  score_manager.h
src/: bullet.cpp  game.cpp  input_handler.cpp  invader.cpp  invader_swarm.cpp  main.cpp  player.cpp  renderer.cpp
(+9 files in other folders)
